# gesture-recognition-tflite-micro

./: .gitignore  .gitmodules  README.md  environment.yml  pyproject.toml  setup.py  setup_environment.sh
data/: README.md
src/hardware/: CMakeLists.txt  model.c  test_adxl345.c
src/hardware/app/: CMakeLists.txt  led.cpp  led.h  main.cpp  model.cpp  model.h  preprocessing_functions.cpp  preprocessing_functions.h  processing_functions.cpp  processing_functions.h  signal_queue.cpp  signal_queue.h  test_adxl345.c  test_adxl345.cpp  tflite_interpreter.cpp  tflite_interpreter.h
src/hardware/app/pytorch/: CMakeLists.txt  main.cpp
src/hardware/app/tensorflow/: CMakeLists.txt  main.cpp
src/hardware/hw_lib/: CMakeLists.txt
src/hardware/hw_lib/led/: CMakeLists.txt  led.cpp
src/hardware/hw_lib/sensors/: adxl345.cpp
src/hardware/hw_lib/setup/: hardware_setup.h
src/hardware/ml_utils/: CMakeLists.txt  processing_functions.cpp  processing_functions.h  signal_queue.cpp  signal_queue.h
src/hardware/pico-tflmicro/: CMakeLists.txt
src/hardware/pico-tflmicro/src/tensorflow/lite/core/c/: common.h
src/hardware/pico-tflmicro/src/tensorflow/lite/micro/kernels/cmsis_nn/: conv.cpp
src/hardware/sensor_lib/: CMakeLists.txt  adxl345.c  adxl345.h
src/hardware/sensors/: CMakeLists.txt  adxl345.h
src/hardware/setup/: CMakeLists.txt  hardware_setup.c  hardware_setup.cpp  hardware_setup.h
src/hardware/tensorflow_app/: CMakeLists.txt
src/ml_dev/: convert_tflite.py  environment.py  gesture_classifier.py  gesture_cnn_model.py  gesture_dataset.py  preprocessing.py  run_training.py
src/ml_dev/pytorch/: gesture_cnn_model.py  gesture_dataset.py  persistence.py  preprocessing.py
src/ml_dev/pytorch/executorch/scripts/: quantize_and_convert_executorch_model.py
src/ml_dev/pytorch/scripts/: evaluate_full_precision_model.py  quantize_and_export_to_onnx.py  quantize_and_save_parameters.py  run_training.py
src/ml_dev/pytorch/training/: __init__.py  history.py  train_model.py
src/ml_dev/scripts/: evaluate_full_precision_model.py  run_training.py
src/ml_dev/tensorflow/: gesture_dataset.py
src/ml_dev/tensorflow/scripts/: evaluate_full_precision_model.py  run_training.py
src/ml_dev/tensorflow/tflite/: execute_tflite_model.py
src/ml_dev/tensorflow/tflite/scripts/: convert_to_uint8only_tflite.py  test_local_model_inference.py
src/ml_dev/tflite/: execute_tflite_model.py
src/ml_dev/tflite/scripts/: convert_to_c_array.py  convert_to_int8only_tflite.py  convert_to_uint8only_tflite.py  test_local_model_inference.py
