[tool.poetry]
name = "gesture-recognition-tflite-micro"
version = "0.1.0"
description = ""
authors = ["Julian Hoever <julianhoever@posteo.de>"]
readme = "README.md"
packages = [{ include = "ml_dev", from = "src" }]

[tool.poetry.dependencies]
python = "^3.12"
tensorflow = "^2.17.0"
keras = "^3.5.0"
matplotlib = "^3.9.2"
cbor2 = "^5.6.4"
numpy = "<2.0.0"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
mypy = "^1.11.2"
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
