cmake_minimum_required(VERSION 3.13)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED On)

set(PICO_SDK_FETCH_FROM_GIT Off)
set(PICO_SDK_PATH ${CMAKE_SOURCE_DIR}/third_party/pico-sdk)

include(pico_sdk_import.cmake)

project(gesture_recognition CXX C ASM)

pico_sdk_init()

add_subdirectory(hw_lib)
add_subdirectory(ml_utils)
add_subdirectory(third_party)
add_subdirectory(tensorflow_app)